--- a/gb/24/6/7/n14266267.md
+++ b/gb/24/6/7/n14266267.md
@@ -33,29 +33,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/17/n14182963.md#1">纽约州欲立法监管人工智能</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/27/n11142951.md#1" target="_blank">共产暴政录：中共鼓励外国残害海外华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/5/n3675948.md#1" target="_blank">中共酷刑：对伤口的摧残</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/10/n2962346.md#1" target="_blank">鲜为人知的马克思之一：专制的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/28/n11285941.md#1" target="_blank">美议员颁发国会特别褒奖 感谢法轮大法</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/27/n14258414.md#1">安金藏剖心的一刀 忠义震慑逆乱 挽救了唐朝</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262775.md#1">【未解之谜】他看到天机：“七星连芒”东方大城历劫</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/31/n14261254.md#1">【未解之谜】盘点宇宙的终极命运 只有一种人可以逃脱</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14263533.md#1">研究过上千例濒死体验 美前牧师谈死后世界</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/28/n14258987.md#1">高智晟律师风骨纪实 韩亦言笔下动人心魄的传奇人物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264803.md#1">【百年真相】安子文的疑问 谁来监督毛泽东？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/7/n14265713.md#1">【秦鹏观察】玩弄中东火药桶？中共又挨伊朗骂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/4/19/n14229157.md#1">【思想领袖】前总统：中共胁迫渗透南太岛国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264460.md#1">传中央巡视组秘查唐山和保定 满大街是警察</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264595.md#1">陷负面传闻 江泽民长子江绵恒职务生变</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264453.md#1">山西沁县政协主席被杀 传与拆迁纠纷有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264874.md#1">范冰冰不再试水温 工作室开通社交平台新账号</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264041.md#1">当年为家庭退出娱乐圈 黎姿回应复出传闻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264149.md#1">大陆演唱遭虫子袭击 张信哲与邓紫棋反应迥异</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264910.md#1">周润发豪宅成陆客打卡点 已故李小龙曾住附近</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265594.md#1">如何成《繁花》男主角 胡歌曝王家卫选角秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/4/n14264003.md#1">枕头套比马桶还脏？微生物专家告诉你该多久洗一次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/3/n14262822.md#1">西瓜皮不要丢 这10种做法让“垃圾”变美食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/5/n14264509.md#1">什么事不适合用简讯传达？ 礼仪专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/13/n14249331.md#1">如何消除腹部脂肪、瘦小腹？中医师教你几招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/2/n14262437.md#1">香甜又下饭的素食料理：南瓜焖豆腐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300810.md#1">【未解之谜】日本最强预言：三千世界面临大清洗 人神历劫</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/30/n14301175.md#1">一两黄金一块砖 紫禁城“金砖”怎地这么高贵？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/18/n14293177.md#1">《货郎图》——有趣的故事传承</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300734.md#1">目睹临终病患与亡者对话 护士质疑无神论</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14303947.md#1">【菁英论坛】中共进入“治脸”时代</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304257.md#1">【时事金扫描】瓦格纳现委国 马杜罗约架马斯克</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303886.md#1">【新闻欣视角】中共两战区司令突换人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303843.md#1">网曝湖南挂反共横幅者更多细节</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304119.md#1">【更新】2024年巴黎奥运奖牌榜 8月3日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303894.md#1">携妻女游日本 胡歌与女儿互动同框首曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304255.md#1">《心的温度》上映首日 2名观众 票房仅91元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304297.md#1">郑中基突开除经理人 宣布：下月高雄唱完后离开</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304294.md#1">知名摇滚天团“史密斯飞船”巡演中宣布退休</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/3/n14304239.md#1">昆凌分享7岁儿一句话 曝周杰伦在家中地位</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/28/n14279677.md#1">抢救落发  三招丰厚发量</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300801.md#1">研究：常见家用化学品会攻击关键脑细胞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304411.md#1">感觉脚痛或疲劳？ 可能是你的凉鞋害的</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302344.md#1">纳豆抗衰老、防血栓 五种人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302515.md#1">有多少食品添加剂不列在成分标签中？</a></li>
 <hr>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/6/7/n14266267.htm">美联邦政府将对英伟达等公司展开反垄断调查</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/6/7/n14266267.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
